2016-02-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: Update copyright year.

2016-02-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix most of the doxygen warnings.
	* doc/examples/asmdemo/asmdemo.dox: (Dito.)
	* include/avr/boot.h: (Dito.)
	* include/avr/fuse.h: (Dito.)
	* include/avr/lock.h: (Dito.)
	* include/avr/pgmspace.h: (Dito.)
	* include/avr/power.h: (Dito.)
	* include/avr/sleep.h: (Dito.)
	* include/avr/wdt.h: (Dito.)
	* include/errno.h: (Dito.)
	* include/math.h: (Dito.)
	* include/setjmp.h: (Dito.)
	* include/stdint.h: (Dito.)
	* include/stdio.h: (Dito.)
	* include/stdlib.h: (Dito.)
	* include/string.h: (Dito.)
	* include/time.h: (Dito.)
	* include/util/delay.h.in: (Dito.)
	* libc/pmstring/memchr_P.S: (Dito.)
	* libc/pmstring/memcmp_P.S: (Dito.)
	* libc/pmstring/memcmp_PF.S: (Dito.)
	* libc/pmstring/memcpy_P.S: (Dito.)
	* libc/pmstring/memcpy_PF.S: (Dito.)
	* libc/pmstring/memrchr_P.S: (Dito.)
	* libc/pmstring/strcasecmp_P.S: (Dito.)
	* libc/pmstring/strcasecmp_PF.S: (Dito.)
	* libc/pmstring/strcat_P.S: (Dito.)
	* libc/pmstring/strcat_PF.S: (Dito.)
	* libc/pmstring/strchr_P.S: (Dito.)
	* libc/pmstring/strchrnul_P.S: (Dito.)
	* libc/pmstring/strcmp_P.S: (Dito.)
	* libc/pmstring/strcmp_PF.S: (Dito.)
	* libc/pmstring/strcpy_P.S: (Dito.)
	* libc/pmstring/strcpy_PF.S: (Dito.)
	* libc/pmstring/strcspn_P.S: (Dito.)
	* libc/pmstring/strlcat_P.S: (Dito.)
	* libc/pmstring/strlcat_PF.S: (Dito.)
	* libc/pmstring/strlcpy_P.S: (Dito.)
	* libc/pmstring/strlcpy_PF.S: (Dito.)
	* libc/pmstring/strlen_P.S: (Dito.)
	* libc/pmstring/strlen_PF.S: (Dito.)
	* libc/pmstring/strncasecmp_P.S: (Dito.)
	* libc/pmstring/strncasecmp_PF.S: (Dito.)
	* libc/pmstring/strncat_P.S: (Dito.)
	* libc/pmstring/strncat_PF.S: (Dito.)
	* libc/pmstring/strncmp_P.S: (Dito.)
	* libc/pmstring/strncmp_PF.S: (Dito.)
	* libc/pmstring/strncpy_P.S: (Dito.)
	* libc/pmstring/strncpy_PF.S: (Dito.)
	* libc/pmstring/strnlen_P.S: (Dito.)
	* libc/pmstring/strnlen_PF.S: (Dito.)